--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:fix": "eslint ./src --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@ant-design/pro-layout": "^6.17.1",
+    "antd": "^4.15.4",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,6 +21,7 @@
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-config-semistandard": "^15.0.1",
@@ -33,6 +36,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-standard": "^5.0.0",
+    "next-plugin-antd-less": "^1.1.4",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
