--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 // Store NON-SECRET default values for all environments. Remove this line.
 NEXT_PUBLIC_VAR=abc
 NEXT_TELEMETRY_DEBUG=1
+NEXT_PUBLIC_COPYRIGHT=My company. All rights reserved.
